--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-js-hw-11</title>
-    
-    <script type="module" src="./index.js"></script>
-  </head>
+    <title>Homework 11</title>    
+    </head>
   <body>
     <form class="search-form" id="search-form">
       <input
@@ -17,5 +15,7 @@
       />
       <button type="submit">Search</button>
     </form>
+
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
