--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 11</title>    
-    </head>
+    <title>Homework 11</title>
+  </head>
   <body>
     <form class="search-form" id="search-form">
       <input
@@ -16,6 +16,10 @@
       <button type="submit">Search</button>
     </form>
 
+    <div class="gallery"></div>
+
+    <button type="button" disabled class="load-more">Load more</button>
+    
     <script type="module" src="./index.js"></script>
   </body>
 </html>
