--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
     <div class="gallery"></div>
 
     <button type="button" disabled class="load-more">Load more</button>
+    <!-- <button type="button" class="on-top">Above</button> -->
     
     <script type="module" src="./index.js"></script>
   </body>
