--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,11 @@
     <div class="gallery"></div>
 
     <button type="button" disabled class="load-more">Load more</button>
-    <!-- <button type="button" class="on-top">Above</button> -->
+    <button type="button" class="on-top">
+      <svg class="icon" width="32" height="32">
+        <use href="./images/icon.svg#circle-up"></use>
+      </svg>
+    </button>
     
     <script type="module" src="./index.js"></script>
   </body>
